--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,21 +1,20 @@
 //====================================================================================================
 .footer {
     background-color: #3c3c3c;
-    padding: 45px 0px;
+    @include adaptiveValue("padding-top", 45, 30, 1100, 767.98, 1);
+    @include adaptiveValue("padding-bottom", 45, 30, 1100, 767.98, 1);
     position: relative;
     z-index: 1;
-    @media (max-width: $md3+px) {
-        padding: 30px 0px;
-    }
     &__body {
         text-align: center;
     }
 
     &__logo {
         display: inline-block;
-        margin: 0px 0px 40px 0px;
-        @media (max-width: $md3+px) {
-            margin: 0px 0px 30px 0px;
+        @include adaptiveValue("padding-top", 40, 30, 1100, 767.98, 1);
+        @include adaptiveValue("padding-bottom", 40, 30, 1100, 767.98, 1);
+        img {
+            max-width: 100%;
         }
     }
 
@@ -27,24 +26,26 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 0px 0px 32px 0px;
-        li {
-            padding: 0px 15px;
-            @media (max-width: $md3+px) {
-                padding: 0px 10px;
-            }
+        @include adaptiveValue("gap", 30, 20, 1100, 767.98, 1);
+        &:not(:last-child) {
+            margin-bottom: rem(32);
         }
+    }
+
+    &__item {
     }
 
     &__link {
         line-height: 1.2;
         color: #a4a4a4;
         transition: all 0.3s ease 0s;
-        &:hover {
-            color: #6c6c6c;
+        @media (any-hover: hover) {
+            &:hover {
+                color: #6c6c6c;
+            }
         }
-        @media (max-width: $md3+px) {
-            font-size: 16px;
+        @media (max-width: $mobile) {
+            font-size: rem(16);
         }
     }
 
@@ -52,8 +53,10 @@
         line-height: 1.2;
         color: #6c6c6c;
         transition: all 0.3s ease 0s;
-        &:hover {
-            color: #a4a4a4;
+        @media (any-hover: hover) {
+            &:hover {
+                color: #a4a4a4;
+            }
         }
     }
 }
