--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,34 @@
-// Заголовки, общие БЄМ блоки и проче...
+.header-block {
+    text-align: center;
+    &__title {
+        position: relative;
+        font-size: rem(34);
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 0.16em;
+        color: #000000;
+        padding-bottom: rem(30);
+        &:not(:last-child) {
+            margin-bottom: rem(30);
+        }
+        &::after {
+            content: "";
+            width: rem(80);
+            height: rem(1);
+            background-color: rgb(0, 0, 0);
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translate(-50%, 0px);
+        }
+    }
+
+    &__subtitle {
+        line-height: math.div(25, 14);
+        font-weight: 300;
+        color: #868585;
+        max-width: rem(690);
+        margin: 0 auto;
+    }
+}
