--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,54 +1,40 @@
-//====================================================================================================
+.menu {
+    padding: rem(22) 0;
+    border-bottom: rem(1) solid #f2f2f2;
+    &_mb {
+        @include adaptiveValue("margin-bottom", 60, 20, 1170, 767.98, 1);
+    }
+    @media (max-width: $mobileSmall) {
+        padding: rem(22) 0 rem(15) 0;
+    }
 
-//====================================================================================================
+    &__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: rem(15);
+    }
 
-//Burger
-/*
-.icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
-		position: relative;
-		width: rem(30);
-		height: rem(18);
-		cursor: pointer;
-		z-index: 5;
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 0.3s ease 0s;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: rem(2);
-			background-color: #000;
-		}
-		&::before {
-			top: 0;
-		}
-		&::after {
-			bottom: 0;
-		}
-		span {
-			top: calc(50% - rem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
-			&::before,
-			&::after {
-			}
-			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
-			}
-			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
-			}
-		}
-	}
+    &__item {
+        padding: 0px rem(25);
+        @media (max-width: $mobileSmall) {
+            flex: 0 1 50%;
+            padding: 0px rem(10);
+            text-align: center;
+        }
+    }
+
+    &__link {
+        font-size: rem(15);
+        line-height: 1.2;
+        font-weight: 700;
+        color: #3c3c3c;
+        transition: all 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: #ada074;
+            }
+        }
+    }
 }
-*/
