--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -109,52 +109,8 @@
 }
 
 //========================================================================================================================================================
-
-.menu {
-    padding: rem(22) 0;
-    border-bottom: rem(1) solid #f2f2f2;
-    &_mb {
-        @include adaptiveValue("margin-bottom", 130, 30, 1170, 767.98, 1);
-    }
-    @media (max-width: $mobileSmall) {
-        padding: rem(22) 0 rem(15) 0;
-    }
-
-    &__list {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        row-gap: rem(15);
-    }
-
-    &__item {
-        padding: 0px rem(25);
-        @media (max-width: $mobileSmall) {
-            flex: 0 1 50%;
-            padding: 0px rem(10);
-            text-align: center;
-        }
-    }
-
-    &__link {
-        font-size: rem(15);
-        line-height: 1.2;
-        font-weight: 700;
-        color: #3c3c3c;
-        transition: all 0.3s ease 0s;
-        &:hover {
-            color: #ada074;
-        }
-        &_act {
-            color: #ada074;
-        }
-    }
-}
-
-//</ОСНОВНОЙ БЛОК>====================================================================================================
-
 .about {
+    @include adaptiveValue("padding-top", 60, 20, 1170, 767.98, 1);
     @include adaptiveValue("padding-bottom", 60, 10, 1170, 767.98, 1);
     &__header-block {
         @include adaptiveValue("margin-bottom", 70, 30, 1170, 767.98, 1);
@@ -230,8 +186,8 @@
 
 .portfolio {
     background-color: #f3f3f3;
-    @include adaptiveValue("padding-top", 105, 50, 1170, 767.98, 1);
-    @include adaptiveValue("padding-bottom", 105, 50, 1170, 767.98, 1);
+    @include adaptiveValue("padding-top", 100, 50, 1170, 767.98, 1);
+    @include adaptiveValue("padding-bottom", 70, 30, 1170, 767.98, 1);
     &__header-block {
         @include adaptiveValue("margin-bottom", 50, 20, 1170, 767.98, 1);
     }
@@ -244,6 +200,9 @@
         display: grid;
         @include adaptiveValue("gap", 30, 20, 1170, 767.98, 1);
         grid-template-columns: repeat(2, 1fr);
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 50, 20, 1170, 479.98, 1);
+        }
         @media (max-width: $mobile) {
             grid-template-columns: 1fr;
         }
@@ -253,13 +212,18 @@
         display: none;
         cursor: pointer;
         @include adaptiveValue("min-height", 360, 260, 1170, 479.98, 1);
+        transition: all 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                box-shadow: 0 rem(10) rem(30) rgba(0, 0, 0, 0.1);
+            }
+        }
         &._showed {
             display: block;
         }
     }
 
     &__footer {
-        @include adaptiveValue("padding-top", 35, 20, 1170, 479.98, 1);
         text-align: center;
     }
 }
@@ -280,8 +244,10 @@
         transition: all 0.3s ease 0s;
         margin: 0px rem(25);
         cursor: pointer;
-        &:hover {
-            color: #ada074;
+        @media (any-hover: hover) {
+            &:hover {
+                color: #ada074;
+            }
         }
         &._active {
             color: #ada074;
@@ -295,37 +261,23 @@
 //</ОСНОВНОЙ БЛОК>====================================================================================================
 
 .partners {
-    background: url("../img/Partners/bg.jpg") center / cover no-repeat;
-    padding: 100px 0px 70px 0;
-    margin: 0px 0px 180px 0px;
-    @media (max-width: $tablet) {
-        padding: 70px 0px 40px 0px;
-        margin: 0px 0px 100px 0px;
-    }
-    @media (max-width: $mobile) {
-        padding: 50px 0px 25px 0px;
-        margin: 0px 0px 70px 0px;
-    }
-    @media (max-width: $mobileSmall) {
-        padding: 40px 0px 15px 0px;
-        margin: 0px 0px 50px 0px;
+    @include adaptiveValue("padding-top", 100, 40, 1170, 479.98, 1);
+    @include adaptiveValue("padding-bottom", 70, 20, 1170, 479.98, 1);
+    @include adaptiveValue("margin-bottom", 90, 25, 1170, 479.98, 1);
+    overflow: hidden;
+    position: relative;
+    &__container {
+        position: relative;
     }
     &__title {
         text-align: center;
-        font-size: 30px;
+        font-size: rem(30);
         line-height: 1.2;
         font-weight: 300;
         letter-spacing: 0.06em;
         color: #ffffff;
-        margin: 0px 0px 90px 0px;
-        @media (max-width: $tablet) {
-            margin: 0px 0px 60px 0px;
-        }
-        @media (max-width: $mobile) {
-            margin: 0px 0px 40px 0px;
-        }
-        @media (max-width: $mobileSmall) {
-            margin: 0px 0px 30px 0px;
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 90, 30, 1170, 479.98, 1);
         }
     }
 
@@ -338,31 +290,32 @@
     }
 
     &__column {
-        padding: 0px 50px;
-        margin: 0px 0px 30px 0px;
+        padding: 0px rem(50);
+        @include adaptiveValue("margin-bottom", 30, 25, 1170, 767.98, 1);
         @media (max-width: $mobile) {
-            padding: 0px 20px;
-            margin: 0px 0px 25px 0px;
+            padding: 0px rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 0px 10px;
+            padding: 0px rem(10);
             flex: 0 1 50%;
         }
     }
+
+    &__bg-ibg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
 }
+
 //</ОСНОВНОЙ БЛОК>====================================================================================================
 
 .contacts {
-    padding: 0px 0px 80px 0px;
-    @media (max-width: $tablet) {
-        padding: 0px 0px 60px 0px;
-    }
-    @media (max-width: $mobile) {
-        padding: 0px 0px 45px 0px;
-    }
-    @media (max-width: $mobileSmall) {
-        padding: 0px 0px 30px 0px;
-    }
+    @include adaptiveValue("padding-top", 90, 25, 1170, 479.98, 1);
+    @include adaptiveValue("padding-bottom", 80, 30, 1170, 479.98, 1);
     &__header-block {
         margin: 0px 0px 120px 0px;
         @media (max-width: $tablet) {
