--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -317,93 +317,75 @@
     @include adaptiveValue("padding-top", 90, 25, 1170, 479.98, 1);
     @include adaptiveValue("padding-bottom", 80, 30, 1170, 479.98, 1);
     &__header-block {
-        margin: 0px 0px 120px 0px;
-        @media (max-width: $tablet) {
-            margin: 0px 0px 80px 0px;
-        }
-        @media (max-width: $mobile) {
-            margin: 0px 0px 60px 0px;
-        }
-        @media (max-width: $mobileSmall) {
-            margin: 0px 0px 40px 0px;
-        }
+        @include adaptiveValue("margin-bottom", 120, 40, 1170, 479.98, 1);
     }
 
     &__body {
-        display: flex;
-        margin: 0px -25px;
-        @media (max-width: $mobile) {
-            display: block;
+        @media (min-width: $mobile) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: rem(50);
         }
     }
 
     &__column {
-        flex: 0 1 50%;
-        padding: 0px 25px;
+        &:not(:last-child) {
+            margin-bottom: rem(30);
+        }
     }
 
     &__form {
         text-align: right;
         @media (max-width: $mobile) {
             text-align: left;
-            margin: 0px 0px 30px 0px;
-            @media (max-width: $mobileSmall) {
-                margin: 0px 0px 15px 0px;
-            }
+            @include adaptiveValue("margin-bottom", 30, 15, 767.98, 479.98, 1);
         }
     }
 
     &__content {
-        max-width: 255px;
+        max-width: rem(255);
         color: #000000;
         @media (max-width: $mobile) {
             max-width: none;
             text-align: center;
-            font-size: 16px;
+            font-size: rem(16);
         }
     }
 
     &__text {
         line-height: 1.5;
-        margin: -3px 0px 40px 0px;
-        @media (max-width: $tablet) {
-            margin: -3px 0px 20px 0px;
-        }
-        @media (max-width: $mobile) {
-            margin: 0px 0px 15px 0px;
-        }
+        margin-top: rem(-3);
+        @include adaptiveValue("margin-bottom", 40, 15, 1170, 479.98, 1);
     }
 
     &__name {
         font-weight: 700;
-        margin: 0px 0px 20px 0px;
-        @media (max-width: $tablet) {
-            margin: 0px 0px 15px 0px;
-        }
+        @include adaptiveValue("margin-bottom", 20, 15, 1170, 991.98, 1);
     }
 
     &__social {
-        margin: 0px 0px 15px 0px;
-        @media (max-width: $tablet) {
-            margin: 0px 0px 10px 0px;
-        }
+        @include adaptiveValue("margin-bottom", 15, 10, 1170, 991.98, 1);
     }
 
     &__email {
         a {
             font-weight: 700;
             color: #000;
-            &:hover {
-                text-decoration: underline;
+            transition: all 0.3s ease 0s;
+            @media (any-hover: hover) {
+                &:hover {
+                    color: #ada074;
+                }
             }
         }
     }
 }
+
 .form-contacts {
     &__body {
         display: inline-block;
         width: 100%;
-        max-width: 385px;
+        max-width: rem(385);
         @media (max-width: $mobile) {
             display: block;
             max-width: none;
@@ -411,59 +393,60 @@
     }
 
     &__row {
-        display: flex;
-        margin: 0px -15px 70px -15px;
-        @media (max-width: $tablet) {
-            margin: 0px -15px 40px -15px;
-        }
-        @media (max-width: $mobile) {
-            margin: 0px -15px 30px -15px;
-        }
-        @media (max-width: $mobileSmall) {
-            display: block;
-            margin: 0px -15px 20px -15px;
+        display: block;
+        @media (min-width: $mobile) {
+            column-gap: rem(30);
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
         }
     }
 
     &__column {
-        flex: 0 1 50%;
-        padding: 0px 15px;
+        margin-bottom: rem(30);
     }
 
     &__input {
-        @media (max-width: $mobileSmall) {
-            margin: 0px 0px 20px 0px;
+        position: relative;
+        .form__error {
+            position: absolute;
+            bottom: rem(-15);
+            right: 0;
+            font-size: rem(12);
+            color: red;
         }
     }
 
     &__label {
         text-align: left;
-        margin: 0px 0px 15px 0px;
         line-height: 1.2;
         font-weight: 700;
         text-transform: uppercase;
         letter-spacing: 0.06em;
         color: #000000;
-    }
-    &__button.btn {
-        margin: 35px 0px 0px 0px;
-        @media (max-width: $tablet) {
-            margin: 25px 0px 0px 0px;
+        &:not(:last-child) {
+            margin-bottom: rem(15);
         }
-        @media (max-width: $mobile) {
-            display: block;
+    }
+    &__button {
+        @include adaptiveValue("margin-top", 35, 30, 1170, 767.98, 1);
+        @media (max-width: $mobileSmall) {
             width: 100%;
-            margin: 20px 0px 0px 0px;
         }
     }
 }
+
 .social {
     display: flex;
+    align-items: center;
+    @media (max-width: $mobile) {
+        justify-content: center;
+    }
     &__item {
-        margin: 0px 15px 0px 0px;
-        @media (max-width: $mobile) {
-            flex: 0 1 50%;
-            margin: -37px 0px 0px 0px;
+        &:not(:last-child) {
+            margin-right: rem(15);
+        }
+        img {
+            max-width: 100%;
         }
     }
 }
